# DermFeature-Detect

./: .gitignore  Makefile  README.md  index.html  pyproject.toml  requirements.txt
configs/: isic.yaml  smoke.yaml
scripts/: download_isic.py
src/dermfeat/: __init__.py  abstention.py  calibrate.py  calibration.py  config.py  engine.py  export.py  losses.py  metrics.py  predict.py  train.py
src/dermfeat/models/: __init__.py  backbone.py  heads.py
tests/: test_metrics.py  test_model_and_calibration.py
