[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dermfeature-detect"
version = "0.1.0"
description = "Multi-head dermoscopy classifier: ABCD attribute heads + calibrated malignancy with abstention."
requires-python = ">=3.9"
dependencies = ["torch>=2.0", "numpy>=1.23", "pyyaml>=6.0"]

[project.optional-dependencies]
isic = ["opencv-python-headless>=4.7", "albumentations>=1.3"]
backbones = ["timm>=0.9"]
export = ["onnx>=1.14", "onnxruntime>=1.15"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
